# for each subdirectory containing a CMakeLists.txt, add that subdirectory
set(ENV{CHAIN_INTERNAL_PLUGINS} "")
file(GLOB children RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *)
foreach(child ${children})
    if(IS_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/${child}")
        if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${child}/CMakeLists.txt")
            add_subdirectory("${child}")
            set(ENV{CHAIN_INTERNAL_PLUGINS} "$ENV{CHAIN_INTERNAL_PLUGINS};${child}")
        endif()
    endif()
endforeach()
